[package]
name = "reth-db-py"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "reth_db_py"
crate-type = ["cdylib"]

[dependencies]
eyre = "0.6.8"
pyo3 = "0.19.0"
serde_json = "1.0"
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider" }
polars = "0.32.1"
arrow = "46.0.0"
